--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,28 @@
+aiohappyeyeballs==2.6.1
+aiohttp==3.13.3
+aiohttp-retry==2.9.1
+aiosignal==1.4.0
+attrs==25.4.0
 certifi==2026.1.4
 charset-normalizer==3.4.4
 colorama==0.4.6
+frozenlist==1.8.0
 idna==3.11
 iniconfig==2.3.0
+multidict==6.7.1
 numpy==2.4.2
 packaging==26.0
 pandas==3.0.1
 pluggy==1.6.0
+propcache==0.4.1
 Pygments==2.19.2
+PyJWT==2.11.0
 pytest==9.0.2
 python-dateutil==2.9.0.post0
+python-dotenv==1.2.1
 requests==2.32.5
 six==1.17.0
+twilio==9.10.2
 tzdata==2025.3
 urllib3==2.6.3
+yarl==1.22.0
